<resources>
    <string name="app_name" translatable="false">Document Reader</string>
    <string name="fb_app_id" translatable="false">1111111111</string>
    <string name="fb_client_token" translatable="false">2222222222222222222222</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="language">Language</string>
    <string name="check_out_this_amazing_app">Check out this amazing app: </string>
    <string name="share_via">Share via</string>
    <string name="the_best_we_can_get">The best we can get:)</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="rating_description_0">We would appreciate your review!</string>
    <string name="rating_description_1_2">We want to know what made you unsatisfied.</string>
    <string name="rating_description_3">We look forward to receiving your feedback to improve.</string>
    <string name="rating_description_4">We will do our best to provide an even better experience.</string>
    <string name="rating_description_5">Your satisfaction is our greatest motivation!</string>
    <string name="thanks_for_your_rating">Thanks for your rating!</string>
    <string name="rating_title_0">Thank you for using the app!</string>
    <string name="rating_title_1_2">Oh No!</string>
    <string name="rating_title_3">Oh, unfortunately!</string>
    <string name="rating_title_4">Thank you!</string>
    <string name="rating_title_5">Wow, great!</string>
    <string name="please_rate_us">Please rate us 5 star!</string>
    <string name="tv_noti_header_home">Haven’t cleaned your phone lately?</string>
    <string name="tv_noti_content_home">🧹 Clean It Now</string>
    <string name="tv_noti_header_quit">Your cleanup isn’t finished yet.</string>
    <string name="tv_noti_content_quit">🧹 Continue Cleaning</string>
    <string name="capture">Capture</string>
    <string name="retake">Retake</string>
    <string name="camera_permission_required">Camera permission is required to scan documents.</string>
    <string name="scanner_hint_searching">Point the camera at a document</string>
    <string name="scanner_hint_hold_steady">Hold steady…</string>
    <string name="scanner_hint_scanning">Scanning…</string>
    <string name="scanner_capture_failed">Unable to capture this photo. Please try again.</string>
    <string name="scanner_manual_shooting">Manual shooting</string>
    <string name="scanner_auto_shooting">Auto shooting</string>
    <string name="scanner_close">Close</string>
    <string name="scanner_flash">Flash</string>
    <string name="scanner_gallery">Import from gallery</string>
    <string name="scanner_scanned_pages">Scanned pages</string>
    <string name="scanner_angle_adjustment">Angle adjustment</string>
    <string name="scanner_rotate">Rotate</string>
    <string name="scanner_apply">Apply</string>
    <string name="scanner_filter">Filter</string>
    <string name="scanner_eraser">Eraser</string>
    <string name="scanner_apply_all">Apply all</string>
    <string name="scanner_filter_default">Default</string>
    <string name="scanner_filter_auto">Auto</string>
    <string name="scanner_filter_enhance">Enhance</string>
    <string name="scanner_filter_magic">Magic</string>
    <string name="scanner_filter_sharpen">Sharpen</string>
    <string name="scanner_filter_grayscale">Grayscale</string>
    <string name="scanner_filter_document">Document</string>
    <string name="scanner_filter_black_white">B&amp;W</string>
    <string name="scanner_filter_text">Text</string>
    <string name="scanner_filter_eco">Eco</string>
    <string name="scanner_filter_night">Night</string>
    <string name="scanner_filter_bright">Bright</string>
    <string name="scanner_filter_vivid">Vivid</string>
    <string name="scanner_filter_warm">Warm</string>
    <string name="scanner_filter_cool">Cool</string>
    <string name="scanner_filter_sepia">Sepia</string>
    <string name="scanner_cancel">Cancel</string>
    <string name="scanner_continue">Continue</string>
    <string name="scanner_back">Back</string>
    <string name="scanner_add_page">Add page</string>
    <string name="scanner_retake_page">Retake page</string>
    <string name="scanner_delete_page">Delete page</string>
    <string name="home">Home</string>
    <string name="tools">Tools</string>
    <string name="storage">Storage</string>
    <string name="exit_app">Exit app</string>
    <string name="lost_network_connection">Lost network connection</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="allow_app_name_to_send_you_notifications">Allow App Name to send you notifications</string>
    <string name="allow">Allow</string>
    <string name="thank_you_for_using_the_app">Thank you for using the app!</string>
    <string name="to_send_you_notifications">to send you notifications</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="write_storage_permission_is_necessary_to_android">Write Storage permission is necessary to Android</string>
    <string name="default_notification_channel_id">Notification</string>
    <string name="all_photo">All photo</string>
    <string name="search_file">Search file</string>
    <string name="enter_search_keyword">Enter search keyword</string>
    <string name="all_file">All file</string>
    <string name="tab_pdf" translatable="false">PDF</string>
    <string name="tab_word" translatable="false">Word</string>
    <string name="tab_excel" translatable="false">Excel</string>
    <string name="tab_ppt" translatable="false">PPT</string>
    <string name="tab_txt" translatable="false">TXT</string>
    <string name="no_file_found">No files found</string>
    <string name="document_info">%1$s · %2$s</string>
    <string name="file_action_rename">Rename</string>
    <string name="file_action_favorite">Favorite</string>
    <string name="file_action_share">Share</string>
    <string name="file_action_delete">Delete</string>
    <string name="file_action_save">Save</string>
    <string name="file_action_cancel">Cancel</string>
    <string name="pdf_discard_changes">Discard changes</string>
    <string name="pdf_discard_changes_message">Do not save this change</string>
    <string name="pdf_continue_editing">Continue editing</string>
    <string name="file_action_yes">Yes</string>
    <string name="file_action_no">No</string>
    <string name="file_rename_hint">File name</string>
    <string name="file_rename_empty">Please enter a file name</string>
    <string name="file_rename_invalid">File name contains invalid characters</string>
    <string name="file_rename_failed">Could not rename file. The name may already exist.</string>
    <string name="file_delete_message">Are you sure want to delete this file?</string>
    <string name="file_delete_failed">Could not delete file</string>
    <string name="file_share_failed">Could not share file</string>
    <string name="selected">Selected (%s)</string>
    <string name="delete_selected_title">Delete Selected Files?</string>
    <string name="delete_selected_message">These files will be permanently deleted from your device.</string>
    <string name="delete_selected_failed">Could not delete %d file(s)</string>
    <string name="no_files_yet">No files yet!</string>
    <string name="all_images">All Images</string>
    <string name="internal_storage">Internal storage</string>
    <string name="import_count">Import (%d)</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_last_edit">Last edit</string>
    <string name="sort_name">Name</string>
    <string name="sort_file_size">File size</string>
    <string name="sort_increase">Increase</string>
    <string name="sort_decrease">Decrease</string>
    <string name="can_slide_show_now">The slide show is not ready yet</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="doc">DOC</string>
    <string name="done">Done</string>
    <string name="error_file_damaged">This file is damaged or is not a valid document.</string>
    <string name="error_file_not_found">This file cannot be found or read. Check that it is still available.</string>
    <string name="error_file_old_format">This document uses an old format that is not supported.</string>
    <string name="error_file_open_generic">This document could not be opened or processed. Please try another file.</string>
    <string name="error_file_password">This document is password protected. A password is required to open it.</string>
    <string name="error_file_password_incorrect">The password for this document is incorrect.</string>
    <string name="error_file_rtf">This file is an RTF document. Please open it with an app that supports RTF.</string>
    <string name="error_file_storage">The document could not be processed because of a storage error. Check free space and access permissions.</string>
    <string name="error_file_too_large_memory">There is not enough memory to open this document.</string>
    <string name="error_go_to_page">Could not go to this page</string>
    <string name="no_result_found">No result found</string>
    <string name="not_found_search">No data found</string>
    <string name="page_by_page">Page by page</string>
    <string name="password_hint">Password</string>
    <string name="pdf">PDF</string>
    <string name="please_enter_a_search">Please enter a search term</string>
    <string name="pptx">PPTX</string>
    <string name="redo">Redo</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="saved_successfully">Saved</string>
    <string name="search_error_occurred">Search error occurred</string>
    <string name="slide_show">Slide Show</string>
    <string name="slide_list">Slide list</string>
    <string name="export_pdf">Export to PDF</string>
    <string name="export_images">Export slides as images</string>
    <string name="some_errors_occurred_please_try_again">Some errors occurred please try again</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="txt" translatable="false">TXT</string>
    <string name="undo">Undo</string>
    <string name="xls">XLS</string>
    <string name="search_for_any_document">Search for any document</string>
    <string name="enter_keyword_to_search">Enter keyword to search</string>
    <string name="translate_pdf">Translate PDF</string>
    <string name="scan_to_pdf">Scan to PDF</string>
    <string name="iamge_to_pdf">Image to PDF</string>
    <string name="create_zip_file">Create a ZIP file</string>
    <string name="scan_pdf">Scan PDF</string>
    <string name="merge_pdf">Merge PDF</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="converted_successfully">Converted Successfully!</string>
    <string name="open_pdf">Open PDF</string>
    <string name="success_file_info">%1$s - %2$s</string>
    <string name="convert_add">Add</string>
    <string name="convert_count">Convert (%d)</string>
    <string name="convert_failed">Could not convert images to PDF</string>
    <string name="file_name_exists">A file with this name already exists</string>
    <string name="select_a_file">Select a file</string>
    <string name="split_select_pages">Select Pages (%s)</string>
    <string name="continue_count">Continue (%d)</string>
    <string name="split_successfully">Split Successfully!</string>
    <string name="split_open_failed">Could not open this PDF</string>
    <string name="split_failed">Could not split this PDF</string>
    <string name="choose_language">Choose Language</string>
    <string name="translate_to">Translate to</string>
    <string name="start_translation">Start Translation</string>
</resources>