<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.ui.baselib.widget.layout.UiLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp"
        app:uiBackgroundColor="@color/white"
        app:uiCornerRadius="@dimen/_16sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/rb_500"
            android:includeFontPadding="false"
            android:text="@string/pdf_discard_changes"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rb_400"
            android:text="@string/pdf_discard_changes_message"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_12sdp" />

        <com.ui.baselib.widget.view.UiTextView
            android:id="@+id/btnContinueEditing"
            style="@style/ButtonAppStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/rb_500"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/pdf_continue_editing"
            android:textSize="@dimen/_13sdp"
            app:uiBackgroundGradientOrientation="top_bottom" />

        <com.ui.baselib.widget.view.UiTextView
            android:id="@+id/btnDiscard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rb_400"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/file_action_cancel"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13sdp"
            app:uiCornerRadius="@dimen/_100sdp"
            app:uiStrokeColor="@color/primary"
            app:uiStrokeWidth="@dimen/_1sdp" />
    </com.ui.baselib.widget.layout.UiLinearLayout>
</FrameLayout>
